Switch to using collectors to generate list as build tools' version of java doesn't support stream.toList() method